--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url('../images/_c00f6a03-6655-46ec-9fb9-a1a4053ddeee.jfif') no-repeat center center fixed;
+  background: url('../images/thumb-1920-1345260.png') no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
